# food-manager

./: .gitignore  CMakeLists.txt  README.md  check_api.cpp  food_list.csv  food_manager.cpp  functions.cpp  inputUtils.cpp  openaiUtils.cpp  settings.json
include/: FoodInfo.hpp  constants.hpp  features.hpp  fileUtils.hpp  foodList.hpp  functions.hpp  inputUtils.hpp  ioUtils.hpp  language.hpp  openaiUtils.hpp  settings.hpp  utils.hpp
locales/: en.json  ja.json  ko.json
src/: features.cpp  fileUtils.cpp  foodList.cpp  functions.cpp  ioUtils.cpp  language.cpp  openaiUtils.cpp  settings.cpp  utils.cpp
